# tenantpower.org

./: .gitignore  CITATION.cff  README.md  app.js  landlords.js  owner_deduplication.ipynb  package-lock.json  package.json  parcel_scrape.R  queries.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: deploy.yml
app/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
app/client-src/: index.html  main.js
app/src/lib/: Map.svelte  state.svelte.js  state.svelte.ts
app/src/lib/components/: AlsoOwned.svelte  Geocoder.svelte  InitWarning.svelte  LabelTag.svelte  Map.svelte  Message.svelte  Modal.svelte  ModalCard.svelte  Overlay.svelte  PropertyCard.svelte  Spinner.svelte
app/src/lib/config/: index.ts  instance.json
app/src/lib/content/: about.md  warning.md
app/src/lib/helpers/: helpers.ts
app/src/lib/schemas/: instance.ts
app/src/lib/styles/: global.scss
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/cluster/[id]/: +page.server.ts
app/src/routes/cluster/[id]/[prop_id]/: +page.server.ts  +page.svelte
app/src/routes/prop/[id]/: +page.server.ts  +page.svelte
app/src/routes/props_by_loc/[lng]/[lat]/[n]/: +server.ts
app/static/data/: bounds.geojson
backend/: .env.example  README.md  main.py  pyproject.toml
client-src/: index.html  main.js  styles.css
pipelines/: README.md
pipelines/dedupe/: README.md
public/js/: map.js
public/views/: index.html
src/db/: queries.js
src/routes/: api.js
training/: learned_settings  training.json
