[project]
name = "tenantpower-backend"
version = "0.1.0"
description = "FastAPI backend for archived TenantPower application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.133.1",
    "gunicorn>=25.1.0",
    "uvicorn-worker>=0.4.0",
]
