[project]
name = "tenantpower-backend"
version = "1.0.0"
description = "FastAPI backend for archived TenantPower application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.133.1",
    "gunicorn>=25.1.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
    "uvicorn-worker>=0.4.0",
]
